--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/indrapuji/fancy-to-do#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "sequelize": "^5.21.5"
   }
