--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/indrapuji/fancy-to-do#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.0.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
